# agentos

./: .gitignore  CMakeLists.txt  README.md
.ai.code.files/: .ai.code.prompt.org
I'll output all SEARCH/REPLACE blocks.src/include/agentos/: enforce_layer.h
I'll produce the blocks now.tests/: CMakeLists.txt
I'll write the block now.third_party/httplib/: httplib.h
Let's craft the answer.dep/: CMakeList.txt
Let's produce the block.src/core/: CMakeLists.txt
Let's produce the block.tests/: registry_test.cpp
Let's produce the blocks.dep/: CMakeLists.txt
Let's produce the blocks.src/tests/: mocks.hpp
Now I'll provide the SEARCH/REPLACE blocks.src/core/forge/: CMakeLists.txt
advisers/content-marketing/: config.toml  manifest.toml  pipeline.md
advisers/skeleton/: skill.md
scripts/: agentos-completion.bash  agentos.service  build.sh  cleanup-jobs.sh  cleanup-workers.sh  download-deps.sh  install.sh  post-install.sh  test.sh  verify_static.sh  watch-job.sh
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  adviser_commands.cpp  asset_commands.cpp  cli_client.cpp  cli_params.cpp  forge_commands.cpp  job_commands.cpp  key_commands.cpp  main.cpp  review_commands.cpp  suite_commands.cpp  user_commands.cpp  worker_commands.cpp
src/core/: CMakeLists.txt  central.cpp  cli_vault.cpp  code_reviewer.cpp  code_writer.cpp  config.cpp  cred_vault.cpp  database.cpp  dispatcher.cpp  enforce_layer.cpp  forge_coordinator.cpp  gateway.cpp  home_init.cpp  llm_client.cpp  llm_proxy.cpp  master.cpp  mind_layer.cpp  orchestrator.cpp  periodic_executor.cpp  registry.cpp  sandbox.cpp  scheduler.cpp  secure_enclave.cpp  suite_installer.cpp  suite_manager.cpp  user_manager.cpp  vault_backend.cpp  verifier.cpp
src/core/capability/: capability.cpp
src/core/config/: config.cpp
src/core/database/: database.cpp  database.hpp
src/core/dispatcher/: dispatcher.cpp  rpc.cpp
src/core/forge/: CMakeLists.txt  code_reviewer.cpp  code_writer.cpp  forge_cli.cpp  forge_cli.hpp  forge_coordinator.cpp  forge_database.cpp  forge_database.hpp  forge_job.cpp  forge_job.hpp  forge_manager.cpp  forge_manager.hpp  forge_rpc.cpp  forge_rpc.hpp  forge_state_machine.cpp  forge_state_machine.hpp
src/core/gateway/: gateway.cpp
src/core/llm/: llm_client.cpp  llm_proxy.cpp
src/core/master/: master.cpp
src/core/obs_bus/: obs_bus.cpp
src/core/orchestrator/: orchestrator.cpp
src/core/registry/: registry.cpp
src/core/sandbox/: sandbox.cpp
src/core/scheduler/: scheduler.cpp
src/include/agentos/: actor.h  adviser_params.h  capability.h  central.h  cli_client.h  cli_color.h  cli_completion.h  cli_format.h  cli_vault.h  code_writer.h  config.h  cred_vault.h  database.h  dispatcher.h  dispatcher.h~  enforce_layer.h  error_utils.h  forge_coordinator.h  forge_job.h  forge_params.h  forge_pipeline_job.h  gateway.h  home_init.h  job_params.h  layer_b.h  llm_client.h  llm_proxy.h  llm_proxy.h** (unchanged)  master.h  message_queue.h  mind_layer.h  obs_bus.h  orchestrator.h  periodic_executor.h  posix.h  protocol_types.h  registry.h  review_params.h  rpc.h  sandbox.h  (+16 more)
src/include/agentos/database/: database.h
src/include/agentos/forge/: code_reviewer.h  code_writer.h  forge_cli.h  forge_coordinator.h  forge_database.h  forge_job.h  forge_manager.h  forge_pipeline_job.h  forge_rpc.h  forge_state_machine.h
src/plugins/hello-plugin/: hello_plugin.py  plugin.md
src/tests/: CMakeLists.txt  test_dispatcher.cpp  test_obs_bus.cpp  test_registry.cpp  test_verifier.cpp
tests/: CMakeLists.txt  capability_test.cpp  cred_vault_test.cpp  database_pipeline_test.cpp  forge_test.cpp  gateway_test.cpp  secure_enclave_test.cpp  test_adr016.cpp  test_adviser_config.cpp  test_central.cpp  test_cli_client.cpp  test_cli_params.cpp  test_config.cpp  test_database.cpp  test_dispatcher.cpp  test_enforce_layer.cpp  test_forge_coordinator.cpp  test_forge_pipeline.cpp  test_gateway.cpp  test_home_init.cpp  test_key_commands.cpp  test_llm_proxy.cpp  test_main.cpp  test_master.cpp  test_mind_layer.cpp  test_obs_bus.cpp  test_orchestrator.cpp  test_periodic_executor.cpp  test_protocol_db.cpp  test_registry.cpp  test_rpc.cpp  test_sandbox.cpp  test_suite_manager.cpp  test_types.cpp  test_verifier.cpp  test_worker_run.cpp  user_manager_test.cpp  vault_backend_test.cpp
tests/unit/: database_pipeline_test.cpp
